Added Neon Stream component